# mtproto-proxy-hub

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DUCKDNS_SETUP.md  HOSTING.md  LICENSE  README.md  vercel.json
.VSCodeCounter/2026-04-13_21-54-54/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: main.py  requirements.txt
backend_cpp/: CMakeLists.txt  INSTALL.md  README.md  build.bat  main.cpp
backend_csharp/: Program.cs  ProxyChecker.cs  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AutoRefreshControl.tsx  BackendLanguageControl.tsx  CountryTooltip.tsx  HideOfflineControl.tsx  LanguageToggle.tsx  MapCanvas.tsx  MapControls.tsx  MapLegend.tsx  PingTypeControl.tsx  ProxyCard.tsx  SkeletonLoader.tsx  SortControl.tsx  ViewModeControl.tsx
frontend/src/locales/: translations.ts
frontend/src/pages/: About.tsx  NotFound.tsx  ProxyMap.tsx
frontend/src/services/: api.ts
frontend/src/styles/: About.css  App.css  ProxyMap.css  fonts.css
frontend/src/types/: map.ts  proxy.ts  sort.ts
frontend/src/utils/: mapData.test.ts  mapData.ts  sorting.ts
start/: README.md  start-all.bat  start-backend.bat  start-frontend.bat
